Wed May 13 00:16:35 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-dialog-util.h, gnome-dialog-util.c: Return the created
 	dialog. This makes the functions much more useful. I was thinking
 	they should be maximally opaque, but went a little overboard
 	I guess.
	* testgnome.c: Well, that was short-lived. Someone else did it
	already. Yay!

1998-05-11  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-list.c (gnome_icon_list_unselect_all): New function.

Tue May 12 00:33:10 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-preferences.h, gnome-preferences.c: Hmm, I didn't think
	about that earlier attempt much. This should work a little better.
	* testgnome.c: Barest skeletal start. 

Sat May  9 15:55:48 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-dialog-util.h, gnome-dialog-util.c: gnome-app-util had 
	some internal functions to quickly pop up some common dialogs;
	so I put them here for anyone to use. Probably bloat, if they 
	weren't used in gnome-app-util anyway.
	* gnome-app-util.c: #include without the libgnomeui prefix.
	 Remove most of the code and put it in gnome-dialog-util.c.
	* gnome-types.h: New file, for now has a couple of function
 	pointer typedefs used in the above stuff.
	* gnome-app-util.h: Changed to use gnome-types.h
	* TODO: Updated.
	* Makefile.am, libgnomeui.h: Include new files.

1998-05-09  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-client.c (default_client_init): Use the new macro
	GTK_HAVE_SIGNAL_INIT 

1998-05-08  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gtkcalendar.c (gtk_calendar_thaw): Added freeze/thaw
	functionality. 

Fri May  8 10:06:01 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-client.c (default_client_init): Call gtk_type_init and
	gtk_signal_init.

Thu May  7 21:46:24 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-dialog.c: Take out debug printfs.

1998-05-07  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-list.c: Changed required for gmc icon view.